# Deep-Neural-Networks-from-Scratch-in-C-

./: 0_abstract_NN_example.cpp  CMakeLists.txt  Pattern.h  adaline.h  backprop.h  base.h  common.h  main.cpp  plot_test.cpp  test.cpp
Examples/: abstract_Network.h  adaline_Network.h
Examples/FeedForward/: ffn_ex1.h  ffn_ex1_simple.h
Examples/adaline/: adaline_ex1.h  adaline_ex2.h  inheritance_tests.h
